Ajout de la catégorie 'Vidéo'

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -2,6 +2,7 @@
   "metaTitle": "YTB Random - Ein zufälliges YouTube-Video ansehen",
   "metaDescription": "Klicke und entdecke ein völlig zufälliges YouTube-Video.",
   "catAll": "ALLE",
+  "catVideo": "VIDEO",
   "catMusic": "MUSIK",
   "adTitle": "Werbung",
   "title": "Entdecke ein Video.",
