--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -2,6 +2,7 @@
   "metaTitle": "YTB Random - Watch a random YouTube video",
   "metaDescription": "Click and discover a totally random YouTube video.",
   "catAll": "ALL",
+  "catVideo": "VIDEO",
   "catMusic": "MUSIC",
   "adTitle": "Advertisement",
   "title": "Discover a Video.",
