--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -2,6 +2,7 @@
   "metaTitle": "YTB Random - Mira un video de YouTube al azar",
   "metaDescription": "Haz clic y descubre un video de YouTube totalmente al azar.",
   "catAll": "TODO",
+  "catVideo": "VIDEO",
   "catMusic": "MÚSICA",
   "adTitle": "Publicidad",
   "title": "Descubre un Video.",
