--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -2,6 +2,7 @@
   "metaTitle": "YTB Random - Regarde une vidéo YouTube aléatoire",
   "metaDescription": "Clique et découvre une vidéo YouTube totalement aléatoire.",
   "catAll": "TOUT",
+  "catVideo": "VIDÉO",
   "catMusic": "MUSIQUE",
   "adTitle": "Publicité",
   "title": "Découvrez une Vidéo.",
