Dynamisation du texte du bouton en fonction de la catégorie

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -11,6 +11,7 @@
   "welcomeSub": "Click the button on the right to start.",
   "shareButton": "Share this video",
   "button": "NEW VIDEO",
+  "buttonMusic": "NEW MUSIC",
   "historyTitle": "Session Activity",
   "historyPlaceholder": "Your history will appear here..."
 }
