--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -11,6 +11,7 @@
   "welcomeSub": "Haz clic en el botón de la derecha para empezar.",
   "shareButton": "Compartir este video",
   "button": "NUEVO VIDEO",
+  "buttonMusic": "NUEVA MÚSICA",
   "historyTitle": "Actividad de la sesión",
   "historyPlaceholder": "Tu historial aparecerá aquí..."
 }
