--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -11,6 +11,7 @@
   "welcomeSub": "Cliquez sur le bouton à droite pour commencer.",
   "shareButton": "Partager cette vidéo",
   "button": "NOUVELLE VIDÉO",
+  "buttonMusic": "NOUVELLE MUSIQUE",
   "historyTitle": "Activité de la session",
   "historyPlaceholder": "Votre historique apparaîtra ici..."
 }
