--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -11,6 +11,7 @@
   "welcomeSub": "Klicke auf die Schaltfläche rechts, um zu beginnen.",
   "shareButton": "Dieses Video teilen",
   "button": "NEUES VIDEO",
+  "buttonMusic": "NEUE MUSIK",
   "historyTitle": "Sitzungsaktivität",
   "historyPlaceholder": "Dein Verlauf wird hier angezeigt..."
 }
